Fixed special characters; added buffer for undivisible 3 up layout on desktop categories pages

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -185,6 +185,13 @@ button {
         }
       }
     }
+    &.needSpacer {
+      &::after {
+        content: '' ;
+        display: block;
+        width: 30%;
+      }
+    }
   }
 
   .page {
